try using jitpack template # test 1